# flappyAuora

./: CMakeLists.txt  CNAME  README.md  tech.getflow.flappyAurora.desktop
qml/components/: Font.qml  Main.qml  Pipe.qml
qml/cover/: DefaultCoverPage.qml
qml/pages/: MainPage.qml
rpm/: tech.getflow.flappyAurora.changes.in  tech.getflow.flappyAurora.changes.run.in  tech.getflow.flappyAurora.spec  tech.getflow.flappyAurora.yaml
src/: main.cpp
translations/: flappyAurora-ru.ts  flappyAurora.ts
